# SpendScan

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/spendscan/: __init__.py  config.py  errors.py
backend/spendscan/analysis/: __init__.py  schemas.py  service.py
backend/spendscan/api/: __init__.py  app.py  dependencies.py  schemas.py
backend/spendscan/api/routes/: __init__.py  analytics.py  auth.py  folders.py  health.py  receipts.py
backend/spendscan/auth/: __init__.py  cookies.py  dependencies.py  passwords.py  schemas.py  tokens.py
backend/spendscan/db/: __init__.py  database.py  spendie.sql  spendscan.db  spendscan_postgres
backend/spendscan/llm/: __init__.py  gemini.py  prompt.py  schemas.py  validation.py
backend/spendscan/models/: __init__.py  db_models.py
backend/spendscan/ocr/: __init__.py  errors.py  paddle.py  protocols.py  qianfan.py  service.py  types.py
backend/spendscan/pipeline/: __init__.py  receipts.py
doc/: POSTGRES_DOCKER_RUNBOOK.md  RECEIPT_PIPELINE_RUNBOOK.md
doc/end/prezentacja/: prezentacja.md  prezentacja.txt
doc/end/raport-dokumentacja/: 06-raport-proj-komp-2026.docx  06-raport-proj-komp-2026.md  ankieta.md  raport-wzor.docx  raport-wzor.md  raport.md  spend-scan.csv  spend-scan.md
docs/documentation/: 404.html  architecture.html  frontend.html  getting-started.html  index.html  objects.inv  symbol-index.html
docs/documentation/assets/: extra.css  extra.js
docs/documentation/backend/: analysis.html  api.html  auth.html  config.html  database.html  index.html  llm.html  ocr.html  pipeline.html
docs/documentation/search/: search_index.json
docs/other/: karta-opisowa-projektu.md
docs/report/: generate_placeholders.py  raport-spendscan.docx
frontend/css/: app.css  base.css  styles.css
frontend/js/: api.js  app.js  icons.js
frontend/public/: about.html  calendar.html  edit.html  index.html  login.html  register.html  scan.html  statistics.html  stats.html
frontend_legacy/css/: styles.css
frontend_legacy/js/: app.js
frontend_legacy/public/: calendar.html  index.html  login.html  register.html  scan.html
scripts/: debug_paired_receipt_multi_ocr.py  prepare_ocr_runtime.py  render_receipt_debug.py  reset_db.py  run_receipt_e2e.py  smoke_paddle.py
tests/: conftest.py
tests/integration/: test_receipt_e2e.py
tests/unit/: test_analysis.py  test_auth.py  test_gemini.py  test_qianfan.py  test_receipt_pipeline.py  test_receipt_repository.py  test_receipt_validation.py  test_receipts_api.py
workspace/: .gitignore
(+21 files in other folders)
